add OpenGraph image

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Michał Wodniczak - kilka słów o mnie</title>
     <meta name="description" content="Michał Wodniczak prezentacja mojej osoby">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="og:image" content="img/homepage.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
